--- a/Tarea_1_sismo/Untitled.ipynb
+++ b/Tarea_1_sismo/Untitled.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Tarea 1 sismología\n",
     "import matplotlib.pyplot as plt #modulo para graficar\n",
@@ -48,7 +59,9 @@
     "latC = Chili['latitude']\n",
     "lonC = Chili['longitude']\n",
     "dephtC = Chili['depth']\n",
-    "magC = Chili['mag']\n"
+    "magC = Chili['mag']\n",
+    "\n",
+    "max(magP)"
    ]
   },
   {
